2009-05-07  Stefan Kost  <ensonic@users.sf.net>

	* Jeskola/README:
	  First quick study, what we need to rewrite Jeskola Bass from scratch.

2009-05-06  Stefan Kost  <ensonic@users.sf.net>

	* Jeskola/CrossDelay/CrossDelay.cpp:
	* Jeskola/CrossDelay/Makefile.am:
	* Jeskola/Makefile.am:
	* configure.ac:
	* Jeskola/CrossDelay (added):
	* Jeskola/CrossDelay/Makefile.am (added):
	* Jeskola/CrossDelay/CrossDelay.cpp (added):
	  Rewrite CrossDelay from scratch (no source available).

2009-05-05  Stefan Kost  <ensonic@users.sf.net>

	* Makk/M3/Makefile.am:
	* Makk/M3/Makk_M3.prs:
	* Makk/M4/Makefile.am:
	* Makk/M4/Makk_M4.prs:
	* Makk/M3/Makk_M3.prs (added):
	* Makk/M4/Makk_M4.prs (added):
	  Yes, more presets.

2009-05-05  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	  One more error added.

	* Jeskola/Delay/Delay.cpp:
	* Jeskola/Delay/Makefile.am:
	* Jeskola/Makefile.am:
	* configure.ac:
	* Jeskola/Delay/Makefile.am (added):
	  Ported one more.

2009-05-05  Stefan Kost  <ensonic@users.sf.net>

	* CyanPhase/DTMF/Makefile.am:
	  Fix element name.

2009-05-05  Stefan Kost  <ensonic@users.sf.net>

	* Jeskola/Noise/Makefile.am:
	* Jeskola/Noise/Makefile.am (added):
	  Add missing Makefile.am.

2009-05-04  Stefan Kost  <ensonic@users.sf.net>

	* FSM/dspchips/DSPChips.h:
	* Matilde/Tracker/BuzzInstrument.cpp:
	* Matilde/Tracker/BuzzSample.cpp:
	* Matilde/Tracker/SurfsDSPLib/SRF_Amp.h:
	* Matilde/Tracker/Tracker.cpp:
	  Build warning fixes.

2009-05-04  Stefan Kost  <ensonic@users.sf.net>

	* CyanPhase/DTMF/DTMF-1.cpp:
	* CyanPhase/DTMF/Makefile.am:
	* Ensonic/CallbackTester/CallbackTester.cpp:
	* Jeskola/Freeverb/main.cpp:
	* Jeskola/Freeverb/revmodel.cpp:
	* Jeskola/Makefile.am:
	* Jeskola/Ninja/Ninja.cpp:
	* Jeskola/Noise/Noise.cpp:
	* Makk/M3/M3.cpp:
	* Makk/M3/Makefile.am:
	* Makk/M4/M4.cpp:
	* Makk/M4/Makefile.am:
	* common/dsplib/dsplib.cpp:
	  Masssive dsplib usage fix. We nned to call DSP_Init from the plugins Init
	  as we link statically to dsplib right now.
	