@@ -1,5 +1,10 @@
 2009-05-07  Stefan Kost  <ensonic@users.sf.net>
 
+	* FSM/PhatMan/PhatMan.cpp:
+	  Comment out leftover printf.
+
+2009-05-07  Stefan Kost  <ensonic@users.sf.net>
+
 	* Jeskola/README:
 	  First quick study, what we need to rewrite Jeskola Bass from scratch.
 
